Models to api (#57)
